<resources>
    <string name="app_name">Marvel</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_popular">Popular</string>
    <string name="title_coming">Up coming</string>
    <string name="title_top">Top rate</string>
    <string name="title_playing">Now playing</string>
    <string name="title_genres">Genres</string>
    <string name="error">Error</string>
    <dimen name="height_appbar">200dp</dimen>
    <dimen name="margin_image">120dp</dimen>
    <string name="genres">Thể loại :</string>
    <string name="vote_avg">IMDB :</string>
    <string name="actor">Diễn viên </string>
    <string name="company">Nhà xuất bản </string>
    <string name="overview">Overview :</string>
    <string name="similar_movie">Phim tương tự</string>

</resources>
