<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.framgia.moviedb.screen.moviedetail.MovieDetailViewModel"
            />
        <import type="com.framgia.moviedb.utils.LayoutManager"/>

    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        >
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <android.support.design.widget.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_appbar"
                >
                <android.support.design.widget.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:scaleType="fitXY"
                        app:imageMovie="@{viewModel.movieDetail.posterMovie}"
                        app:layout_collapseMode="parallax"
                        tools:ignore="ContentDescription"
                        />

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        />
                </android.support.design.widget.CollapsingToolbarLayout>

            </android.support.design.widget.AppBarLayout>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onPlay()}"
                android:src="@drawable/icon_play"
                app:layout_anchor="@id/appBar"
                app:layout_anchorGravity="bottom|end"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_appbar"
                    android:layout_marginTop="@dimen/height_appbar"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="@dimen/with_poster"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        android:scaleType="fitXY"
                        app:imageMovie="@{viewModel.movieDetail.backdropMovie}"
                        tools:ignore="ContentDescription"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_size"
                        android:layout_marginTop="@dimen/margin_textview"
                        android:text="@{viewModel.movieDetail.nameMovie}"
                        android:textColor="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="@dimen/width_text"
                        android:layout_height="match_parent"
                        android:text="@string/genres"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@{viewModel.genres}"
                        android:textColor="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="@dimen/width_text"
                        android:layout_height="match_parent"
                        android:text="@string/vote_avg"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@{Float.toString(viewModel.movieDetail.voteAvgMovie)}"
                        android:textColor="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="@dimen/width_text"
                        android:layout_height="match_parent"
                        android:text="@string/actor"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="@dimen/width_text_company"
                        android:layout_height="match_parent"
                        android:text="@string/company"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="@dimen/width_text"
                        android:layout_height="match_parent"
                        android:text="@string/overview"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.movieDetail.overviewMovie}"
                        android:textColor="@android:color/white"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_textview"
                    android:text="@string/similar_movie"
                    android:textColor="@android:color/white"
                    />
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManagerRecycler="@{LayoutManager.horizontal()}"
                    app:recyclerAdapter="@{viewModel.adapterMovie}"
                    >

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>
    </android.support.v4.widget.NestedScrollView>

</layout>
